--- a/index.html
+++ b/index.html
@@ -217,17 +217,17 @@
 		<div class="container">
 			<div class="row pg100">
 				<div class="col-3 pg0 d-flex justify-content-center flex-column">
-					<img class="little" src="../img/info1.png" alt="">
+					<img class="little" src="../img/eat1.png" alt="">
 					<h2 class="text-dark text-center">840</h2>
 					<h2 class="text-muted text-center">PIESE OF MEET</h2>
 				</div>
 				<div class="col-3 pg0 d-flex justify-content-center flex-column">
-					<img class="little" src="../img/info2.png" alt="">
+					<img class="little" src="../img/eat2.png" alt="">
 					<h2 class="text-dark text-center">900</h2>
 					<h2 class="text-muted text-center">PLATES OF RICE</h2>
 				</div>
 				<div class="col-3 pg0 d-flex justify-content-center flex-column">
-					<img class="little" src="../img/info3.png" alt="">
+					<img class="little" src="../img/eat3.png" alt="">
 					<h2 class="text-dark text-center">450</h2>
 					<h2 class="text-muted text-center">CROISSANTS</h2>
 				</div>
