--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</div>
 			</div>
 			<div class="row d-flex justify-content-center white shadow">
-				<img src="./img/logo.png" class="logo" alt="">
+				<img src="./img/logotip.png" class="logo" alt="">
 			</div>
 			<div class="row d-flex justify-content-center-light white shadow">
 				<h1 class="text-light text-center main">One Step to Making a Good Start</h1>
